fix kstart5 crash on wayland

Make kstart query NETRootInfo only if it is running on QX11Info::isPlatformX11 following porting guidelines.

Verified by starting just crashed plasmashell via 'kstart5 plasmashell'

BUG: 403965